--- a/index.html
+++ b/index.html
@@ -750,20 +750,20 @@ Today,</i> etc.
           <font size="5"><b>Research Fellows:</b></font><br><br>
                     <font size="4">
                     <ul type="circle">
-                      <li>Diego Kreutz (Jan. 2023-), Monash University.</li>
+                      <li>Zhimei Sui (2023-), Monash University.</li>
                     </ol>
                     </font>
                 </div>
         <br>
         <div class="col-lg-offset-0">
           <font size="5"><b>PhD students:</b></font><br><br>
-          <font size="4"><b>Main supervision</b><br>
+          <font size="4">
+            <b>Main supervision</b><br>
           <ol type="circle">
 	    <!-- <li>Tong Cao (Feb.2018-), University of Luxembourg. (Co-supervised with Prof. Paulo Verissimo)</li> -->
             <!-- <li>Runchao Han (Feb.2019-), Monash University. </li> -->
             <li>Joao Otavio Massari Chervinski (Oct.2019-), Monash University.</li>
 	    <li>Shange Fu (Oct.2019-), Monash University.</li>
-            <li>Zhimei Sui (Nov.2019-), Monash University.</li>
             <li>Liangrong Zhao (March 2021-), Monash University.</li>
             <li>Yuanzhe Zhang (June 2021-), Monash University.</li>
             <li>Hans Schmiedel (Nov. 2021-), Monash University.</li>
@@ -783,7 +783,11 @@ Today,</i> etc.
           <br>
 
           <font size="5"><b>Alums:</b></font><br><br>
-          <font size="4"><b>PhD</b><br>
+          <font size="4"><b>Postdoc</b><br>
+          <ol type="circle">
+            <li>Diego Kreutz (2023), Monash University. (Now: Professor at Aeronautics Institute of Technology, Brazil.)</li>
+          </ol>
+          <b>PhD</b><br>
           <ol type="circle">
 	    <li>Tong Cao (2018-2021), University of Luxembourg. (Co-supervised with Prof. Paulo Verissimo. Now: Lead Researcher@Kunyao Academy.)</li>
             <li> <a href="https://runchao.rocks/">Runchao Han</a> (2019-2022), Monash University. (Now: Senior Research Engineer@Babylon.)</li>
@@ -797,6 +801,13 @@ Today,</i> etc.
               Arash Mirzaei (2019-2023), Monash
               University. (Co-supervised with Dr. Amin Sakzad and
               A/P. Ron Steinfeld. Now: Postdoc at ANU.)
+            </li>
+
+            <li> <a href="https://runchao.rocks/">Runchao Han</a> (2019-2022), Monash University. (Now: Senior Research Engineer@Babylon.)</li>
+            
+            <li>
+              Zhimei Sui (2019-2023), Monash University. (Now: Postdoc
+              at Monash University.)
             </li>
           </ol>
           <font size="4"><b>Master (minor thesis)</b><br>
