--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@ Today,</i> etc.
                             <br><br>
                             <b>What I have been working on recently...<br>
                               <!-- <a href="doc/key_publication.html">[Selected list]</a> &nbsp; -->
-                              <a href="doc/publication.html">[Full list]</a> &nbsp;
+                              <!-- <a href="doc/publication.html">[Full list]</a> &nbsp; -->
                               <a href="https://scholar.google.co.uk/citations?user=-1C1IIcAAAAJ&hl=en"> [Google scholar]</a>&nbsp; 
                               <a href="http://dblp.uni-trier.de/pers/hd/y/Yu:Jiangshan">[DBLP]</a></b><br>
                             <br> <b>[DSN-Disrupt'23]</b> "Fault Independence in Blockchain"
@@ -703,6 +703,16 @@ Today,</i> etc.
                             (>60) of media news press coverage,
                             including <i><font color="blue">ACM TechNews, ScienceDaily,
                                 EurekAlert!,</font></i> etc.
+
+                            <!-- <br><br> -->
+
+                            <!-- <b>Patent:</b><br> -->
+                            <!--   <ul type="circle"> -->
+                            <!--     <li> -->
+                            <!--       Jiangshan Yu and Mark Ryan. 'Key -->
+                            <!--       usage detection'. UK Patent <a href="https://patents.google.com/patent/GB2530084B/en">GB2530084B</a> -->
+                            <!--     </li> -->
+                          </ul>
 </font>
 
         </div>
