--- a/index.html
+++ b/index.html
@@ -788,6 +788,7 @@ Today,</i> etc.
             <!-- <li>Dabao Wang (Jan. 2022-), Monash University. (Co-supervised with Xingliang Yuan)</li> -->
             <li>Jun Zhao (May. 2022-), Monash University. (Co-supervised with Prof. Joseph Liu and Dr. Xingliang Yuan)</li>
             <li>Dongkun Hou (May. 2023-), Monash University. (Co-supervised with Dr. Shujie Cui and Prof. Joseph Liu)</li>
+            <li>Brian Chen (Sept. 2023-), Monash University. (Co-supervised with Prof. Joseph Liu and Dr Tsz Hon Yuen)</li>
           </ol></font>
 
           <br>
