--- a/index.html
+++ b/index.html
@@ -781,7 +781,6 @@ Today,</i> etc.
           <font size="4"><b>Co-supervision</b><br>
           <ol type="circle">
             <li>Kassem Bagher (Dec. 2019), Monash University. (Co-supervised with Dr. Xingliang Yuan)</li>
-            <li>Chaochen Shi (Jan.2020-), Deakin University. (Co-supervised with Prof. Yong Xiang)</li>
             <li>Sina Aeeneh (July 2020-), Monash University. (Faculty of Engineering, Co-supervised with Prof. Nikola Zlatanov)</li>
             <li>Peter Ince (Aug. 2021-), Monash University. (Co-supervised with Prof. Joseph Liu and Dr. Xiaoning Du)</li>
             <li>Zoey Ziyi Li (Oct. 2021-), Monash University. (Co-supervised with Prof. Joseph Liu and Prof. Dragan Gasevic)</li>
@@ -800,7 +799,7 @@ Today,</i> etc.
           </ol>
           <b>PhD</b><br>
           <ol type="circle">
-	    <li>Tong Cao (2018-2021), University of Luxembourg. (Co-supervised with Prof. Paulo Verissimo. Now: Lead Researcher@Kunyao Academy.)</li>
+	    <li>Tong Cao (2018-2021), University of Luxembourg. (Co-supervised with Prof. Paulo Verissimo. Now: Postdoc at The Hong Kong Polytechnic University.)</li>
             <li> <a href="https://runchao.rocks/">Runchao Han</a> (2019-2022), Monash University. (Now: Senior Research Engineer@Babylon.)</li>
             <li>
               <a href="https://jiachi-chen.github.io">Jiachi Chen</a>
@@ -817,6 +816,7 @@ Today,</i> etc.
               Zhimei Sui (2019-2023), Monash University. (Now: Postdoc
               at Monash University.)
             </li>
+            <li>Chaochen Shi (2020-2023), Deakin University. (Co-supervised with Prof. Yong Xiang. Now: Postdoc at The Hong Kong Polytechnic University.)</li>
           </ol>
           <font size="4"><b>Master (minor thesis)</b><br>
           <ol type="circle">
