--- a/index.html
+++ b/index.html
@@ -116,7 +116,16 @@ http://www.templatemo.com/tm-395-urbanic
                       </div>
                       <div class="clearfix"></div>
                       </div>
-                      <p> <font size="4"> <b>Dr. Jiangshan Yu (于江山)</b></p>
+                      <p> <b><font size="4"> <b>Dr. Jiangshan Yu (于江山)</b></p>
+                      <p><font style="color:red">From 2024, I will
+                          join USYD
+                          as <a href="https://en.wikipedia.org/wiki/Associate_professor">
+                          Associate Professor (Commonwealth
+                          system) </a>. </font></p>
+                      <p><font style="color:red">
+                        <b>Postdoc and PhD positions will be
+                          available!</b> More details to come.</font></p>
+                      <br>
                       <p><b>Senior Lecturer (<a href="https://en.wikipedia.org/wiki/Senior_lecturer">equiv.</a> Associate Professor in US)<br>
                           ARC DECRA Fellow <br>
                           Monash Research Talent Accelerator (RTA) Fellow <br>
