This has a large number of changes, mainly include:
- update affiliation to USYD
- update with new publications
- update PC member with CCS
- update profile photo

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ http://www.templatemo.com/tm-395-urbanic
 <html lang="en">
     <head>
         <title>Jiangshan Yu</title> <meta name="keywords" content="Jiangshan Yu,
-        information security, privacy, 于江山, 信息安全">
-        <meta property="og:description" content="Homed page of Dr. Jiangshan Yu, Monash University, Australia.">
+        security, blockchain, privacy, 于江山, 信息安全">
+        <meta property="og:description" content="Homed page of Dr. Jiangshan Yu, University of Sydney, Australia.">
         <meta property="og:image" content="https://www.jiangshanyu.com/images/J-Yu.jpg">
 
         <meta charset="UTF-8">
@@ -87,8 +87,11 @@ http://www.templatemo.com/tm-395-urbanic
                         <!-- <div class= "col-sm-12 col-md-2 templatemo-partner-item"> -->
                             <br>
                           
-                          <img style="width: 300px; height: 375px;"
-                              src="images/J-Yu.jpg"
+                          <!-- <img style="width: 300px; height: 375px;" -->
+                          <!--     src="images/J-Yu.jpg" -->
+                          <!--      alt="icon"> -->
+                          <img style="width: 309px; height: 375px;"
+                              src="images/1.jpg"
                                alt="icon"> <br><br><br><br>
                           <div style="width: 310px; height:
                                       230px;">
@@ -107,43 +110,41 @@ http://www.templatemo.com/tm-395-urbanic
                         190px; height: 30px"
                                                                        src=images/email/email1.png></a>
                         <!--     <a href="doc/5A096C34.asc"> -->
-                        <!-- <font size="3">(PGP Key)</font></a> -->
+                              <!-- <font size="3">(PGP Key)</font></a> -->
+                            <br><font style="color:red">
+                                <b>Postdoc and PhD positions are
+                                  available!</b> <br>
+                                More details to
+                                  come.</font>
+                            <br>
+
                             </div>
                           <!-- </div> -->
+
                           <br>
                           <br><br><br>
                         <br class="clearfix"/>
                       </div>
                       <div class="clearfix"></div>
                       </div>
-                      <p> <b><font size="4"> <b>Dr. Jiangshan Yu (于江山)</b></p>
-                      <p><font style="color:red">From 2024, I will
-                          join USYD
-                          as <a href="https://en.wikipedia.org/wiki/Associate_professor">
-                          Associate Professor (Commonwealth
-                          system) </a>. </font></p>
-                      <p><font style="color:red">
-                        <b>Postdoc and PhD positions will be
-                          available!</b> More details to come.</font></p>
-                      <br>
-                      <p><b>Senior Lecturer (<a href="https://en.wikipedia.org/wiki/Senior_lecturer">equiv.</a> Associate Professor in US)<br>
-                          ARC DECRA Fellow <br>
-                          Monash Research Talent Accelerator (RTA) Fellow <br>
-                          Elected Member, IFIP Working Group 10.4<br>
-                          Scientific Advisory Board, Austrian Blockchain Center<br>
-                          <br>
+                      <p> <font size="4"> <b>Dr. Jiangshan Yu (于江山)</b></p>
 
-                          Research Director, Monash Blockchain Technology Centre<br>
-                          Department of Software Systems and Cybersecurity<br>
-                          Monash University, Australia.</b>
-                      </font>
+                      <p><b><a href="https://en.wikipedia.org/wiki/Associate_professor">
+                      Associate Professor</a> <br> ARC DECRA
+                      Fellow <br> Elected Member, IFIP Working Group
+                      10.4 <br> Scientific Advisory Board, Austrian
+                      Blockchain Center<br>
+                          <br>
+                    </font></b>
                       </p>
                     <div class="col-lg-offset-4 JYuinfo_right"><font size="4">
                         <p> Dr. Jiangshan Yu is a 2021 ARC DECRA
-                           Fellow and Senior Lecturer (~US Associate
-                           Professor) at Monash University. He serves
-                           as Research Director at Monash Blockchain
-                           Technology Centre.
+                           Fellow and Associate Professor at the
+                           University of Sydney. He is an elected
+                           member of
+                           the <a href="https://www.dependability.org/?page_id=265">IFIP Working Group 10.4 on Dependable
+                           Computing and Fault Tolerance</a>.
+
 
                         He received his PhD in Computer Science from
                       the University of Birmingham (UK), supervised
@@ -153,9 +154,15 @@ http://www.templatemo.com/tm-395-urbanic
                       with <a href="https://scholar.google.com/citations?user=aMHx8aUAAAAJ&hl=en">
                       Prof. Paulo Esteves-Verissimo
                           </a>(IEEE and ACM Fellow) at SnT, University
-                      of Luxembourg. <br><br> His research interests
-                      are in the broad area of cybersecurity, with a
-                      recent focus on blockchain systems.<br><br>
+                      of Luxembourg. Prior to joining the University
+                      of Sydney, he held positions as Lecturer
+                      (<a href="https://en.wikipedia.org/wiki/Academic_ranks_%28Australia_and_New_Zealand%29"> ~U.S. Assistant Professor</a>) and Senior
+                      Lecturer (<a href="https://en.wikipedia.org/wiki/Academic_ranks_%28Australia_and_New_Zealand%29">~U.S. Associate Professor</a>) at Monash
+                      University. <br>
+                          <br>
+                          His research interests are in the broad area
+                      of cybersecurity, with a recent focus on
+                      blockchain systems.<br><br>
 
 
                       <!-- <p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;"> -->
@@ -176,8 +183,26 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                          <li><b>[2023-12]</b> I'm thrilled to
+                            announce my next chapter as <b>Associate
+                            Professor at the University of
+                              Sydney</b>.</li>
+                          <li><b>[2023-12]</b> I'm delighted to serve
+                            as a PC member for <b>CCS'24</b>.</li>
                           <li>
-                            <b> [2023-04]</b> My paper on "Fault
+                            <b>[2023-12]</b> Our paper on "OneShot:
+                            View-Adapting Streamlined BFT with TEEs"
+                            has been accepted for publication at
+                            <b>IPDPS'24</b>.</li>
+                            <li><b> [2023-12]
+                              </b> Our <b>response</b> to a recent
+                            EuroSys23 paper (Gupta et al.) is now out!
+                            Our paper is
+                            titled: <a href="https://arxiv.org/pdf/2312.05714.pdf">"Vivisecting
+                            the Dissection: On the Role of Trusted
+                            Components in BFT Protocols".</a></li>
+                            <li><b> [2023-04]
+                              </b> My paper on "Fault
                             Independence in Blockchain" has been
                             accepted for publication
                             at <b><a href="https://dsn2023.dei.uc.pt/calls_cfp-disrupt.html">Disrupt
@@ -668,6 +693,12 @@ Today,</i> etc.
                               <!-- <a href="doc/publication.html">[Full list]</a> &nbsp; -->
                               <a href="https://scholar.google.co.uk/citations?user=-1C1IIcAAAAJ&hl=en"> [Google scholar]</a>&nbsp; 
                               <a href="http://dblp.uni-trier.de/pers/hd/y/Yu:Jiangshan">[DBLP]</a></b><br>
+
+                            <br> <b>[Our view point on TEE-BFT]</b> <a href="https://arxiv.org/pdf/2312.05714.pdf">"Vivisecting
+                            the Dissection: On the Role of Trusted
+                              Components in BFT Protocols".</a>
+                            <br> <b>[IPDPS'24]</b> "OneShot:
+                            View-Adapting Streamlined BFT with TEEs"
                             <br> <b>[DSN-Disrupt'23]</b> "Fault Independence in Blockchain"
                             <br> <b>[DSN'23]</b> "Analyzing the Performance of the Inter-Blockchain Communication Protocol"
                             <br> <b>[FC'23]</b> "Fair Delivery of Decentralised Randomness Beacon"
@@ -855,12 +886,12 @@ Today,</i> etc.
               Lianyang Yu (2020), "Game theoretic analysis on
               reputation concept in blockchain security", Monash
               University. (Followed by a PhD study at The University of
-              Queensland)
+              Queensland.)
             </li>
             <li>
               Yu Xia (2020), "Formal analysis and verification of the
               RepuCoin system", Monash University. (Co-supervised with
-              Vincent Rahli.)
+              Vincent Rahli.) (Followed by a PhD study at The University of Edinburgh.)
             </li>
           </ol>
           </font>
@@ -1218,27 +1249,27 @@ Today,</i> etc.
                         </div>
                         <br>
                               <div class="col-lg-offset-0"><br><br>
-                    <font size="5"><b> Service at Monash:
-                    </b></font><br><br><font size="4">
-                      <ul type="circle">
-                        <li>[2022 - present] Deputy
-                          Director, <a href="https://ace-sip.org">Algorand
-                          Centre of Excellence on Sustainability
-                          Informatics for the Pacific (ACE-SIP)</a>
-                        </li>
-                        <li>
-                          [2020 - present] Research
-                          Director, <a href="https://www.monash.edu/blockchain">Monash
-                          Blockchain Technology Centre</a>.
-                        </li>
-                        <li>
-                          [2020] Engagement Coordinator (Deputy
-                          Director), <a href="https://www.monash.edu/it/ssc">Department
-                          of Software Systems and
-                          Cybersecurity</a>.
-                        </li>
+                    <!-- <font size="5"><b> Service at Monash: -->
+                    <!-- </b></font><br><br><font size="4"> -->
+                    <!--   <ul type="circle"> -->
+                    <!--     <li>[2022 - present] Deputy -->
+                    <!--       Director, <a href="https://ace-sip.org">Algorand -->
+                    <!--       Centre of Excellence on Sustainability -->
+                    <!--       Informatics for the Pacific (ACE-SIP)</a> -->
+                    <!--     </li> -->
+                    <!--     <li> -->
+                    <!--       [2020 - present] Research -->
+                    <!--       Director, <a href="https://www.monash.edu/blockchain">Monash -->
+                    <!--       Blockchain Technology Centre</a>. -->
+                    <!--     </li> -->
+                    <!--     <li> -->
+                    <!--       [2020] Engagement Coordinator (Deputy -->
+                    <!--       Director), <a href="https://www.monash.edu/it/ssc">Department -->
+                    <!--       of Software Systems and -->
+                    <!--       Cybersecurity</a>. -->
+                    <!--     </li> -->
                         <!-- <li>Media Spokesperson, <a href="https://www.monash.edu/it">Faculty of Information Technology</a>. (June.2019 - present) </li> -->
-                    </ul><br>
+                    <!-- </ul><br> -->
 
                     <font size="5"><b> External Service:
                     </b></font><br><br><font size="4">
@@ -1253,8 +1284,21 @@ Today,</i> etc.
                               </ul><br>
 
                             <li><b>Journal editorship:</b></li>
-	                      <ul type="circle">
-                                <li>Associate Editor, International Journal of Blockchain Applications and Secure Computing <b>(IJBASC)</b></li>
+	                    <ul type="circle">
+                              <li>
+                                [2024] Guest Editor, Blockchain:
+                                Research and
+                                Application <b>(IJBASC)</b>, Special
+                                Issue title: “Unleashing the
+                                Potential: Advancements and
+                                Innovations in Blockchain Technology”.
+                              </li>
+                                <li>
+                                  [2023-present] Associate Editor,
+                                  International Journal of Blockchain
+                                  Applications and Secure
+                                  Computing <b>(IJBASC)</b>
+                                </li>
                             </ul><br>
 
                             <li><b>Conference (Co-)Chair</b></li>
@@ -1291,6 +1335,9 @@ Today,</i> etc.
                             <ol>
                               <li>
                                 The 50th International Conference on Very Large Data Bases <b>(VLDB)</b>
+                              </li>
+                              <li>
+                                The 31th ACM Conference on Computer and Communications Security <b>(CCS)</b>
                               </li>
                             </ol>
                             <b>2023</b>
