--- a/index.html
+++ b/index.html
@@ -182,6 +182,9 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                          <li><b>[2024-01]</b> I'm delighted to serve
+                            as Associate Editor for <b>
+                              ACM DLT</b>.</li>
                           <li><b>[2023-12]</b> I'm thrilled to
                             announce my next chapter as <b>Associate
                             Professor at the University of
@@ -1285,9 +1288,14 @@ Today,</i> etc.
                             <li><b>Journal editorship:</b></li>
 	                    <ul type="circle">
                               <li>
-                                [2024] Guest Editor, Blockchain:
-                                Research and
-                                Application <b>(IJBASC)</b>, Special
+                                  [2024-present] Associate Editor,
+                                  ACM Distributed Ledger Technologies:
+                                  Research and
+                                  Practice <b>(ACM DLT)</b>.
+                                </li>
+                              <li>
+                                [2024] Guest Editor, <b>Blockchain:
+                                Research and Application</b>, Special
                                 Issue title: “Unleashing the
                                 Potential: Advancements and
                                 Innovations in Blockchain Technology”.
