--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ http://www.templatemo.com/tm-395-urbanic
                             <br><font style="color:red">
                                 <b>Postdoc and PhD positions are
                                   available!</b> <br>
-                                <a href="doc/phd.md">More on PhD Scholarship.</font>
+                                <a href="doc/phd.md">More on PhD Scholarship.</a></font>
                             <br>
 
                             </div>
