--- a/index.html
+++ b/index.html
@@ -182,6 +182,8 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                          <li><b>[2024-03]</b> I'm delighted to serve as a PC member
+                            for <b>DSN'25</b>.</li>
                           <li><b>[2024-01]</b> I'm delighted to serve
                             as Associate Editor for <b>
                               ACM DLT</b>.</li>
@@ -1333,6 +1335,14 @@ Today,</i> etc.
                                 </a>, Birmingham, United Kingdom, 2015.</li>
                               </ul><br>
                             <li><b>Conference Program Committee Member</b></li>
+                            <b>2025</b>
+                            <ol>
+                              <li>
+                                The 55th Annual IEEE/IFIP
+                                International Conference on Dependable
+                                Systems and Networks <b>(DSN)</b>
+                              </li>
+                            </ol>
                             <b>2024</b>
                             <ol>
                               <li>
