--- a/index.html
+++ b/index.html
@@ -182,8 +182,15 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                          <li><b>[2024-03]</b> I'm delighted to serve
+                            on the Communication and Outreach
+                            Committee for <b> IFIP WG 10.4 on
+                            Dependable Computing and Fault Tolerance</b>.</li>
                           <li><b>[2024-03]</b> I'm delighted to serve as a PC member
                             for <b>DSN'25</b>.</li>
+                          <li><b>[2024-02]</b> I'm delighted to serve
+                            as a committee member for the selection of
+                            <b>The Test Of Time Award for DSN 2024</b>.</li>
                           <li><b>[2024-01]</b> I'm delighted to serve
                             as Associate Editor for <b>
                               ACM DLT</b>.</li>
@@ -1276,7 +1283,13 @@ Today,</i> etc.
                                                   6px">
 
 	                    <li><b>Membership and direction of organisations:</b></li>
-	                      <ul type="circle">
+	                    <ul type="circle">
+                              <li> [2024-present] Member,
+                                Communication and Outreach Committee,
+                                IFIP WG 10.4 on Dependable Computing
+                                and Fault Tolerance.</li>
+                               <li> [2024] Member, Selection Committee, The
+                            Test Of Time Award for DSN 2024.</li>
                                 <li>[2023-present] Chair, ACE Working Group on Sustainability and Social Impact.</li>
                                 <li>[2022-present] Elected Member, IFIP Working Group 10.4 on Dependable Computing and Fault Tolerance</li>
                                 <li>[2021-present] Scientific Advisory Board, Austrian Blockchain Center, Austria.</li>
