--- a/index.html
+++ b/index.html
@@ -183,6 +183,9 @@ http://www.templatemo.com/tm-395-urbanic
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
                           <li><b>[2024-03]</b> I'm delighted to serve
+                            on the External Review Committee (ERC)
+                            for <b> USENIX ATC'24</b>.</li>
+                          <li><b>[2024-03]</b> I'm delighted to serve
                             on the Communication and Outreach
                             Committee for <b> IFIP WG 10.4 on
                             Dependable Computing and Fault Tolerance</b>.</li>
@@ -1364,6 +1367,7 @@ Today,</i> etc.
                               <li>
                                 The 31th ACM Conference on Computer and Communications Security <b>(CCS)</b>
                               </li>
+                              <li>The USENIX Annual Technical Conference <b>(USENIX ATC)</b> (ERC)</li>
                             </ol>
                             <b>2023</b>
                             <ol>
