--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@ http://www.templatemo.com/tm-395-urbanic
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
                           <li><b>[2024-03]</b> I'm delighted to serve
-                            on the External Review Committee (ERC)
-                            for <b> USENIX ATC'24</b>.</li>
+                            on the PC (ERC) for <b> USENIX
+                            ATC'24</b>.</li>
                           <li><b>[2024-03]</b> I'm delighted to serve
                             on the Communication and Outreach
                             Committee for <b> IFIP WG 10.4 on
