--- a/index.html
+++ b/index.html
@@ -183,6 +183,9 @@ http://www.templatemo.com/tm-395-urbanic
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
                           <li><b>[2024-03]</b> I'm delighted to serve
+                            as Keynote Speaker at the 8th Symposium on
+                            Distributed Ledger Technology <b>(SDLT'24)</b>.</li>
+                          <li><b>[2024-03]</b> I'm delighted to serve
                             on the PC (ERC) for <b> USENIX
                             ATC'24</b>.</li>
                           <li><b>[2024-03]</b> I'm delighted to serve
