--- a/index.html
+++ b/index.html
@@ -1316,6 +1316,15 @@ Today,</i> etc.
                                 Potential: Advancements and
                                 Innovations in Blockchain Technology”.
                               </li>
+                             
+                             
+                              <li>
+                                [2024] Guest Editor, <b> IEEE Internet
+                                  of Things Magazine
+                                </b>, Special Issue title: “IoT
+                                Security and Provisioning in
+                                Cyber-Enabled Niche Critical
+                                Infrastructure”.
                                 <li>
                                   [2023-present] Associate Editor,
                                   International Journal of Blockchain
