--- a/index.html
+++ b/index.html
@@ -809,14 +809,14 @@ Today,</i> etc.
           <hr class="team_hr team_hr_right hr_gray" /><br>
         </div>
                 <div class="col-lg-offset-0"><br><br>
-          <font size="5"><b>Research Fellows:</b></font><br><br>
-                    <font size="4">
-                    <ul type="circle">
-                      <li>Zhimei Sui (2023-), Monash University.</li>
-                    </ol>
-                    </font>
-                </div>
-        <br>
+        <!--   <font size="5"><b>Research Fellows:</b></font><br><br> -->
+        <!--             <font size="4"> -->
+        <!--             <ul type="circle"> -->
+        <!--               <li>Zhimei Sui (2023-), Monash University.</li> -->
+        <!--             </ol> -->
+        <!--             </font> -->
+        <!--         </div> -->
+        <!-- <br> -->
         <div class="col-lg-offset-0">
           <font size="5"><b>PhD students:</b></font><br><br>
           <font size="4">
@@ -865,8 +865,7 @@ Today,</i> etc.
               A/P. Ron Steinfeld. Now: Postdoc at ANU.)
             </li>
             <li>
-              Zhimei Sui (2019-2023), Monash University. (Now: Postdoc
-              at Monash University.)
+              Zhimei Sui (2019-2023), Monash University. (Now: Assistant Professor at Shanghai University.)
             </li>
             <li>Chaochen Shi (2020-2023), Deakin University. (Co-supervised with Prof. Yong Xiang. Now: Postdoc at The Hong Kong Polytechnic University.)</li>
           </ol>
