CSF, and student job update

--- a/index.html
+++ b/index.html
@@ -182,6 +182,12 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                          <li>
+                            <b>[2024-04]</b> Our paper on "Modeling
+                            Mobile Crash in Byzantine Consensus" has
+                            been accepted for publication at
+                            <b>CSF'24</b>. Well donne Hans
+                            Schmiedel! </li>
                           <li><b>[2024-03]</b> I'm delighted to serve
                             as Keynote Speaker at the 8th Symposium on
                             Distributed Ledger Technology <b>(SDLT'24)</b>.</li>
@@ -714,6 +720,7 @@ Today,</i> etc.
                             <br> <b>[Our view point on TEE-BFT]</b> <a href="https://arxiv.org/pdf/2312.05714.pdf">"Vivisecting
                             the Dissection: On the Role of Trusted
                               Components in BFT Protocols".</a>
+                            <br> <b>[CSF'24]</b> "Modeling Mobile Crash in Byzantine Consensus"
                             <br> <b>[IPDPS'24]</b> "OneShot:
                             View-Adapting Streamlined BFT with TEEs"
                             <br> <b>[DSN-Disrupt'23]</b> "Fault Independence in Blockchain"
@@ -824,8 +831,6 @@ Today,</i> etc.
           <ol type="circle">
 	    <!-- <li>Tong Cao (Feb.2018-), University of Luxembourg. (Co-supervised with Prof. Paulo Verissimo)</li> -->
             <!-- <li>Runchao Han (Feb.2019-), Monash University. </li> -->
-            <li>Joao Otavio Massari Chervinski (Oct.2019-), Monash University.</li>
-	    <li>Shange Fu (Oct.2019-), Monash University.</li>
             <li>Liangrong Zhao (March 2021-), Monash University.</li>
             <li>Yuanzhe Zhang (June 2021-), Monash University.</li>
             <li>Hans Schmiedel (Nov. 2021-), Monash University.</li>
@@ -868,6 +873,8 @@ Today,</i> etc.
               Zhimei Sui (2019-2023), Monash University. (Now: Assistant Professor at Shanghai University.)
             </li>
             <li>Chaochen Shi (2020-2023), Deakin University. (Co-supervised with Prof. Yong Xiang. Now: Postdoc at The Hong Kong Polytechnic University.)</li>
+            <li>Joao Otavio Massari Chervinski (2019-2024), Monash University. (Now: Researcher at Informal Systems.)</li>
+            <li>Shange Fu (2019-2024), Monash University. (Now: Entrepreneur in the blockchain industry.)</li>
           </ol>
           <font size="4"><b>Master (minor thesis)</b><br>
           <ol type="circle">
