--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ http://www.templatemo.com/tm-395-urbanic
                             <b>[2024-04]</b> Our paper on "Modeling
                             Mobile Crash in Byzantine Consensus" has
                             been accepted for publication at
-                            <b>CSF'24</b>. Well donne Hans
+                            <b>CSF'24</b>. Well done Hans
                             Schmiedel! </li>
                           <li><b>[2024-03]</b> I'm delighted to serve
                             as Keynote Speaker at the 8th Symposium on
