--- a/index.html
+++ b/index.html
@@ -189,8 +189,16 @@ http://www.templatemo.com/tm-395-urbanic
                             <b>CSF'24</b>. Well done Hans
                             Schmiedel! </li>
                           <li><b>[2024-03]</b> I'm delighted to serve
-                            as Keynote Speaker at the 8th Symposium on
-                            Distributed Ledger Technology <b>(SDLT'24)</b>.</li>
+                            as a <u> Keynote Speaker
+                            </u> at The 6th ACM
+                            International Symposium on Blockchain and
+                            Secure Critical Infrastructure <b>(ACM
+                            BSCI'24)</b>.
+                          </li>
+                          <li><b>[2024-03]</b> I'm delighted to serve
+                            as a <u>Keynote Speaker</u> at the 8th
+                            Symposium on Distributed Ledger
+                            Technology <b>(SDLT'24)</b>.</li>
                           <li><b>[2024-03]</b> I'm delighted to serve
                             on the PC (ERC) for <b> USENIX
                             ATC'24</b>.</li>
@@ -1297,11 +1305,17 @@ Today,</i> etc.
 	                    <li><b>Membership and direction of organisations:</b></li>
 	                    <ul type="circle">
                               <li> [2024-present] Member,
-                                Communication and Outreach Committee,
-                                IFIP WG 10.4 on Dependable Computing
-                                and Fault Tolerance.</li>
-                               <li> [2024] Member, Selection Committee, The
-                            Test Of Time Award for DSN 2024.</li>
+                              Communication and Outreach Committee,
+                              IFIP WG 10.4 on Dependable Computing and
+                              Fault Tolerance.</li>
+                               <li> [2024] Member, Selection
+                                 Committee, The Test Of Time Award for
+                                 DSN 2024.</li>
+                               <li>
+                                 [2024] Member, Selection Committee,
+                                 The 2024 Jean-Claude Laprie (JCL)
+                                 Award for IFIP WG 10.4.
+                               </li>
                                 <li>[2023-present] Chair, ACE Working Group on Sustainability and Social Impact.</li>
                                 <li>[2022-present] Elected Member, IFIP Working Group 10.4 on Dependable Computing and Fault Tolerance</li>
                                 <li>[2021-present] Scientific Advisory Board, Austrian Blockchain Center, Austria.</li>
