--- a/index.html
+++ b/index.html
@@ -182,14 +182,19 @@ http://www.templatemo.com/tm-395-urbanic
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
                           <li>
+                          <li><b>[2024-06]</b> I'm delighted to serve
+                            as a <u> Keynote Speaker</u> at The 29th
+                            IEEE Pacific Rim International Symposium
+                            on Dependable Computing <b>(IEEE
+                            PRDC'24)</b>.
+                          </li>
                             <b>[2024-04]</b> Our paper on "Modeling
                             Mobile Crash in Byzantine Consensus" has
                             been accepted for publication at
                             <b>CSF'24</b>. Well done Hans
                             Schmiedel! </li>
                           <li><b>[2024-03]</b> I'm delighted to serve
-                            as a <u> Keynote Speaker
-                            </u> at The 6th ACM
+                            as a <u> Keynote Speaker</u> at The 6th ACM
                             International Symposium on Blockchain and
                             Secure Critical Infrastructure <b>(ACM
                             BSCI'24)</b>.
